fixed grid overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -271,6 +271,7 @@ justify-content: center;
     grid-template-columns: repeat(2, var(--ncell-size));
     grid-template-rows: repeat(4, var(--ncell-size));
     margin: auto;
+    overflow: hidden;
 }
 .global_grid.r1{
     border-top-left-radius: var(--collumn-gap-grid);
